# grapes-editor

./: .dockerignore  .env.example  .gitignore  Dockerfile  ERRORS_FIXED.md  README.md  docker-compose.yml  package-lock.json  package.json  server.js  test-ai.js
backend/: Cargo.toml  build_error.txt  build_error_2.txt  build_error_3.txt  package-lock.json  package.json
backend/src/: main.rs  server.ts
backend/src/config/: db.ts  postgres.ts
backend/src/controllers/: analytics.controller.ts  auth.controller.ts  commerce.controller.ts  page.controller.ts  project.controller.ts  publish.controller.ts  template.controller.ts  vfs.controller.ts
backend/src/middleware/: auth.middleware.ts
backend/src/models/: AnalyticsEvent.ts  Cart.ts  CollaborationComment.ts  Collection.ts  Experiment.ts  Order.ts  Project.ts  Template.ts  User.ts
backend/src/models/sql/: index.ts
backend/src/routes/: analytics.routes.ts  auth.routes.ts  commerce.routes.ts  generate.rs  project.routes.ts  publish.routes.ts  template.routes.ts  vfs.routes.ts
backend/src/schema/: logic_flow.rs
backend/src/vfs/: AutoOrganizer.ts  SafetyGuard.ts  UndoStack.ts  index.ts
desktop/: Cargo.toml  index.html  package-lock.json  package.json  tauri.conf.json  vite.config.ts
desktop/capabilities/: default.json
desktop/src/: lib.rs  main.rs
desktop/src/akasha/: analyzer.rs  graph.rs  mod.rs  parser.rs  validator.rs
desktop/src/backend/: db.rs  error.rs  git.rs  mod.rs  state.rs  watcher.rs
desktop/src/backend/routes/: akasha.rs  blocks.rs  components.rs  diagrams.rs  endpoints.rs  files.rs  generate.rs  logic.rs  mod.rs  models.rs  pages.rs  project.rs  variables.rs  workspace.rs
desktop/src/commands/: api_commands.rs  block_commands.rs  command_log.rs  ipc.rs  mod.rs
desktop/src/frontend/: App.css  App.tsx  index.css
desktop/src/frontend/context/: DragDropContext.tsx  ThemeContext.tsx  ToastContext.tsx
desktop/src/frontend/hooks/: useEditorSettings.ts  (+4 more)
desktop/src/generator/: backend.rs  database.rs  flow_wiring.rs  frontend.rs  logic_compiler.rs  mod.rs  openapi.rs  sync_engine.rs
desktop/src/schema/: api.rs  block.rs  common.rs  data_model.rs  logic_flow.rs  mod.rs  project.rs  variable.rs
desktop/src/storage/: mod.rs
desktop/src/vfs/: file_tree.rs  mod.rs
(+255 files in other folders)
